--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,13 @@
 body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #215449;
-    border: 20px solid #6f4c3a;
-  }
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #215449;
+  border: 20px solid #6f4c3a;
+}
   
   #draggable-resizable {
     width: 200px;
@@ -34,3 +33,27 @@ body {
   #draggable-resizable:hover #resize-handle {
     display: block;
   }
+
+  #input-area {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 10%;
+    background-color: #f8f8f8; /* Optional: This will add a background color */
+} 
+
+#input-wrapper {
+  display: flex;
+  align-items: center; /* If you want to align the items vertically */
+  gap: 10px; /* If you want to add some space between the items */
+}
+
+.message{
+  font-size: 50px;
+  color:#fff;
+}
+
+#outputarea{
+  width: 100%;
+  display: inline-block;
+}
